--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -49,10 +49,14 @@
       width: 100%;
     }
   }
-
+  
   .content {
     > h2 {
       font-size: 1.5rem;
+      color: $secondary-header-color;
+      [theme=dark] & {
+        color: $secondary-header-color-dark;
+      }
 
       & code {
         font-size: 1.25rem;
@@ -104,11 +108,14 @@
       > .header-mark::before {
         content: "|";
         margin-right: .3125rem;
-        color: $single-link-color;
+        color: $header-mark-color;
 
         [theme=dark] & {
-          color: $single-link-color-dark;
+          color: $header-mark-color-dark;
         }
+      }
+      &:hover .header-mark::before {
+        color:$header-mark-color-hover;
       }
     }
 
